# google-calender-scheduler

./: .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt
frontend/: .gitignore  index.html  package.json  vite.config.js
frontend/src/: App.jsx
